# topdeskpy

./: README.md  brk.toml  pyproject.toml
src/topdeskpy/: topdeskpy.py
